Add a task to simulate and report on multiple runs
This long overdue convenience task makes it simpler to compare the hit
rates over various cache sizes. The simulator will be invoked once for
each maximumSize configuration, generate a CSV report, and combine them
into a single CSV report. The fixed configuration details should be
specified in the reference.conf file (or application.conf override), or
passed in as system property overrides.

```
./gradlew simulator:simulate \
  --maximumSize=256,512,768,1_024 \
  -Dcaffeine.simulator.files.paths.0=multi3.trace.gz
```

The rewriter utility was updated to use this nicer cli syntax instead
of mapping Gradle properties (via `-P` prefix).

```
gradlew :simulator:rewrite \
  --inputFormat=? --inputFiles=? \
  --outputFormat=? --outputFile=?
```